PROJECT(NETCDFIO)

INCLUDE_DIRECTORIES(
    ${NCXX4_INCLUDE_DIR}
    ${NETCDF_INCLUDE_DIR}
    #${netCDF_INCLUDE_DIR}
    #"/opt/netcdf-c-4.8.1/install/include"
    ${GDALRATImageIO_SOURCE_DIR}
    ${GDALRATImageIO_BINARY_DIR}
    ${ITK_INCLUDE_DIRS}
    ${OTB_INCLUDE_DIRS}
    ${otbsuppl_core_SOURCE_DIR}
    ${OTB_DIR}/Code/Common
    ${OTB_DIR}/Code/IO
    ${OTB_DIR}/Utilities/ITK/Code/Common
    ${shared_SOURCE_DIR}
    ${NETCDFIO_SOURCE_DIR}
    ${NETCDFIO_BINARY_DIR}
    ${shared_BINARY_DIR}
    ${filters_BINARY_DIR}
    ${filters_SOURCE_DIR}
    ${MPI_CXX_INCLUDE_DIRS}
)

LINK_DIRECTORIES(NetCDFIO
    ${NETCDF_LIB_DIR}
    ${NCXX4_LIB_DIR}
    #${OTB_LIBRARY_DIRS}
    ${OSGEO4W_ROOT}/lib
)

add_definitions(-DNETCDFIO_EXPORTS -DNM_PROC_LOG)
include(GenerateExportHeader)
ADD_LIBRARY(NetCDFIO SHARED
    ${NETCDFIO_SOURCE_DIR}/nmNetCDFIO.cxx
)

set_property(TARGET NetCDFIO PROPERTY LINKER_LANGUAGE CXX)
set_property(TARGET NetCDFIO PROPERTY POSITION_INDEPENDENT_CODE 1)
generate_export_header(NetCDFIO)

TARGET_LINK_LIBRARIES(NetCDFIO
    OTBImageIO
    OTBCurlAdapters
    ${NETCDF_LIBRARY}
    ${NCXX4_LIBRARY}
    OTBGDALRATImageIO
    ${MPI_CXX_LIBRARIES}
)
ADD_DEPENDENCIES(NetCDFIO OTBGDALRATImageIO)

LIST(APPEND NETCDF_HEADER ${NETCDFIO_SOURCE_DIR}/nmNetCDFIO.h )
#install(FILES ${NETCDF_HEADER} DESTINATION include )

if(WIN32)
    install(TARGETS NetCDFIO
        LIBRARY DESTINATION lib
        RUNTIME DESTINATION lib
    )
else()
    install(TARGETS NetCDFIO LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )
endif()
