PROJECT(NETCDFIO)

INCLUDE_DIRECTORIES(
    ${NCXX4_INCLUDE_DIR}
    ${NETCDF_INCLUDE_DIR}
    ${GDALRATImageIO_SOURCE_DIR}
    ${GDALRATImageIO_BINARY_DIR}
    ${ITK_INCLUDE_DIRS}
    ${OTB_INCLUDE_DIRS}
    ${OTBSupplCore_SOURCE_DIR}
    ${OTBSupplCore_BINARY_DIR}
    ${OTB_DIR}/Code/Common
    ${OTB_DIR}/Code/IO
    ${OTB_DIR}/Utilities/ITK/Code/Common
    ${shared_SOURCE_DIR}
    ${NETCDFIO_SOURCE_DIR}
    ${NETCDFIO_BINARY_DIR}
    ${shared_BINARY_DIR}
    ${filters_BINARY_DIR}
    ${filters_SOURCE_DIR}
    ${MPI_CXX_INCLUDE_DIRS}
)

LINK_DIRECTORIES(NetCDFIO
    ${HDF5_ROOT}
    ${NCXX4_LIB_DIR}
    ${NETCDF_LIB_DIR}
    ${OSGEO4W_ROOT}/lib
)

add_definitions(-DNETCDFIO_EXPORTS -DNM_PROC_LOG)
include(GenerateExportHeader)
ADD_LIBRARY(NMNetCDFIO SHARED
    ${NETCDFIO_SOURCE_DIR}/nmNetCDFIO.cxx
)

set_property(TARGET NMNetCDFIO PROPERTY LINKER_LANGUAGE CXX)
set_property(TARGET NMNetCDFIO PROPERTY POSITION_INDEPENDENT_CODE 1)
generate_export_header(NMNetCDFIO)

TARGET_LINK_LIBRARIES(NMNetCDFIO
    ${NCXX4_LIBRARY}
    ${NETCDF_LIBRARY}
    curl xml2
    ${MPI_CXX_LIBRARIES}
    ${HDF5_hdf5_LIBRARY_RELEASE} ${HDF5_hdf5_hl_LIBRARY_RELEASE}
    OTBImageIO
    OTBCurlAdapters
)

LIST(APPEND NETCDF_HEADER ${NETCDFIO_SOURCE_DIR}/nmNetCDFIO.h )
install(FILES ${NETCDF_HEADER} DESTINATION include )

if(WIN32)
    install(TARGETS NMNetCDFIO
        LIBRARY DESTINATION lib
        RUNTIME DESTINATION lib
    )
else()
    install(TARGETS NMNetCDFIO LIBRARY DESTINATION lib )
endif()
